--- a/styles/larger.css
+++ b/styles/larger.css
@@ -48,7 +48,7 @@
         padding-left: 0;
     }
     .navigation .active {
-        background-color: #233635;
+        background-color: #152020;
         color: #b7e0e0;
     }
 
@@ -84,7 +84,7 @@
         top: 30px;
         right: 30px;
         padding: .5rem;
-        background-color: #93caca;
+        background-color: #caf3f3;
         box-shadow: -2px 2px 5px #233635;
         opacity: 0.75;
     }
@@ -94,7 +94,7 @@
         font-weight: 700;
         font-size: 1rem;
         font-family: "Oswald", monospace;
-        color: rgb(24, 71, 63);
+        color: rgb(0, 3, 3);
     }
     #hero-label:hover {
         box-shadow: -10px 10px 20px #233635;
